--- a/main.html
+++ b/main.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <title>Feedback Form</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Feedback Form</h1>
-    <form id="feedbackForm" action="/submit" method="post">
-        <label for="name">Name: </label>
-        <input type="text" id="name" name="name" minlength="3" maxlength="50" required><br>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+	
+	<form action="" method="post">
+        <h1>Feedback Form</h1>
 
-        <label for="portfolio">Portfolio: </label>
-        <input type="url" id="portfolio" name="portfolio" required><br>
+        <p>
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" minlength="3" maxlength="50" required>
+            <br>
+        </p>
 
-        <label for="favColor">Favourite Colour: </label>
-        <select id="favColor" name="favColor" required>
-            <option value="">Select a Colour</option>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="green">Green</option>
-            <option value="yellow">Yellow</option>
-        </select><br>
+        <p>
+            <label for="portfolio">Portfolio</label>
+            <input type="url" name="portfolio" id="portfolio" required>
+            <br>
+        </p>
 
-        <label for="likeness">How much do you like your colour? </label>
-        <input type="range" id="likeness" name="likeness" min="1" max="100" required><br>
+        <p>
+            <label for="favColor">Favourite color</label>
+            <input type="color" name="" id="favColor" required>
+            <br>
+        </p>
 
-        <input type="submit" value="Submit">
+        <p>
+            <label for="likeness">Likeness of color</label>
+            <input type="range" name="likeness" class="slider" id="likeness" min="1" max="100" required>
+            <br>
+        </p>
     </form>
+
 </body>
+
 </html>
